Fixed an issue where uib-rating had ceased to work. Fixed an issue where number of reviews was no longer being shown.

--- a/pc/static/bower.json
+++ b/pc/static/bower.json
@@ -16,10 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5",
     "angular": "~1.4.7",
     "angular-ui-router": "ui-router#~0.2.15",
     "angular-bootstrap": "~0.14.3",
-    "angular-resource": "~1.4.7"
+    "angular-resource": "~1.4.7",
+    "bootstrap": "~3.3.5"
   }
 }
